--- a/version-notes/v0.6.md
+++ b/version-notes/v0.6.md
@@ -2,6 +2,20 @@
 
 ## What's New
 
+### Enhanced Mobile Trading Interface
+
+1. Redesigned Mobile Trading View:
+   - Improved layout for better readability and usability on mobile devices.
+   - Added clear product icons and price information.
+
+2. Enhanced Batch Trading UI:
+   - Implemented a more intuitive batch size selector.
+   - Buy and sell buttons now display the exact quantity and total cost/earnings.
+
+3. Improved Price Trend Visualization:
+   - Added clearer indicators for price trends and market sentiment.
+   - Included comparison prices from other towns for better decision-making.
+
 ### Batch Buying and Selling
 
 1. Implemented Batch Trading:
@@ -14,7 +28,7 @@
 
 3. Improved Trading Experience:
    - Players can now quickly trade large quantities of goods.
-   - Buy and sell buttons display the current batch size for clarity.
+   - Buy and sell buttons display the current batch size, quantity, and total cost/earnings for clarity.
 
 4. Performance Optimization:
    - Optimized the buying and selling functions to handle batch transactions efficiently.
@@ -53,9 +67,10 @@
 
 ## Next Steps
 
-- Implement "Go ahead x turns" feature for faster game progression.
-- Develop a welcome screen with game instructions for new players.
+- Implement similar trading interface improvements for the desktop view.
+- Develop "Go ahead x turns" feature for faster game progression.
+- Create a welcome screen with game instructions for new players.
 - Continue refining the user interface based on player feedback.
 - Explore advanced economic simulation features to enhance gameplay depth.
 
-This update significantly improves the trading experience in Business Empire, allowing players to manage larger volumes of goods more efficiently. The batch buying and selling feature adds a new layer of strategy to the game, enabling players to capitalize on market opportunities more effectively. Additionally, the bug fixes and performance improvements enhance the overall stability and user experience of the game.
+This update significantly improves the trading experience in Business Empire, particularly on mobile devices. The enhanced batch buying and selling feature, combined with the improved mobile interface, adds a new layer of strategy to the game, enabling players to capitalize on market opportunities more effectively. Additionally, the bug fixes and performance improvements enhance the overall stability and user experience of the game.
